[metadata]
name = nlp-algo
version = 0.1.0
author= M.G. 
author_email = ming_gao@outlook.com
url = https://github.com/minggnim/nlp-algo
description = A repository that holds a collection of morden NLP algorithms
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires =
    >=3.6
install_requires =
    numpy
    pandas
    torch
    transformers
    keybert
    sentence_transformers
 
[options.packages.find]
where = src
